fix loader alignment

--- a/Redline/Assets/WebGLTemplates/main/style.css
+++ b/Redline/Assets/WebGLTemplates/main/style.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #222c36;
+}
+
 .webgl-content * {
   border: 0;
   margin: 0;
@@ -38,18 +42,29 @@
   float: right;
 }
 
-div.loaded {
-  background-color: white !important;
-  outline: 1px black solid;
+#loader {
+  background-color: #222c36;
+  z-index: 99;
+
+  width: 100%;
+  height: 50%;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+
+
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
 }
 
-.spinner {
-  z-index: 99;
-  margin: 30vh auto;
-  width: 50%;
-  height: 100px;
-  text-align: center;
-  font-size: 10px;
+.loaded {
+  background-color: white !important;
+  outline: 1px black solid;
 }
 
 #msg {
@@ -57,14 +72,21 @@ div.loaded {
   font-size: 30px;
   font-family: Arial;
   font-style: italic;
-  background-color: black;
+  background-color: #222c36;
   margin: auto;
 }
 
-.spinner>.rect {
+.spinner {
+  background-color: #222c36;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.spinner > .rect {
   box-shadow: 2px 2px 2px black;
   background-color: #333;
-  height: 100%;
+  height: 100px;
   width: 10px;
   margin: 3px;
   display: inline-block;
